overflow fix

--- a/resources/views/v2/components/HeaderLight/HeaderLight.css
+++ b/resources/views/v2/components/HeaderLight/HeaderLight.css
@@ -5,6 +5,7 @@
     padding-bottom: $padding-md;
     padding-bottom: $padding-xs ?if $mobile;
     position: relative;
+    overflow-x: hidden;
 }
 
     .HeaderLight__content {
